# rxdjango

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  context7.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/worflows/: react.yml
.github/workflows/: ci.yml  react.yml
django-react/: InstanceHandler.d.ts  InstanceHandler.ts  PersistentWebsocket.ts  StateBuilder.ts  StateChannel.d.ts  StateChannel.ts  hook.ts
docs/: api-reference.rst  architecture-overview.rst  caching.rst  conf.py  context-channel.rst  index.rst  makefrontend.rst  optimistic-updates.rst  quickstart.rst  using-rxdjango.rst
prompts/: rxql-specs.md
react_framework/: apps.py  channels.py  consumers.py  mongo.py  signal_handler.py  state_model.py  state_model.py.orig  websocket_router.py
react_framework/ts/: __init__.py  channels.py  interfaces.py
react_test/: apps.py
react_test/migrations/: 0001_initial.py  0002_deadline.py
rxdjango/: __init__.py  actions.py  apps.py  cache_expiry.py  channels.py  consumers.py  decorators.py  exceptions.py  mongo.py  operations.py  redis.py  related_properties.py  sdk.py  serialize.py  signal_handler.py  state_loader.py  state_model.py  transaction.py  transaction_manager.py  websocket_router.py  write.py
rxdjango-react/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
rxdjango-react/src/: ContextChannel.interfaces.ts  ContextChannel.test.ts  ContextChannel.ts  InstanceHandler.d.ts  InstanceHandler.ts  PersistentWebsocket.test.ts  PersistentWebsocket.ts  StateBuilder.many.test.ts  StateBuilder.mock.ts  StateBuilder.test.ts  StateBuilder.ts  StateChannel.d.ts  StateChannel.interfaces.ts  StateChannel.ts  (+6 more)
src/: ContextChannel.ts  PersistentWebsocket.ts  StateBuilder.mock.ts  StateBuilder.test.ts  StateBuilder.ts  actions.d.ts  hook.ts  index.ts
test_project/: requirements.txt
wsframework/: apps.py  cache.py  channels.py  consumers.py  decorators.py  exceptions.py  mongo.py  routing.py  state_loader.py  state_model.py  tasks.py  views.py
(+55 files in other folders)
