[project]
name = "rxdjango"
version = "0.0.7"
authors = [
  { name="Luis Fagundes", email="lhfagundes@gmail.com" },
]
description = "A Django layer to synchronize models between back and frontend"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

]
[project.urls]
"Homepage" = "https://github.com/CDIGlobalTrack/rxdjango"
"Bug Tracker" = "https://github.com/CDIGlobalTrack/rxdjango/issues"

[tool.setuptools]
package-dir = {"" = "./rxdjango"}
